@@ -385,6 +385,9 @@ Fixed bugs:
 * The framed JUnit report now handles multiple reports for the same
   testcase properly.  Bugzilla Report 32745.
 
+* <cab> didn't work for files with spaces in their names on Windows.
+  Bugzilla Report 17182.
+
 Changes from Ant 1.6.1 to Ant 1.6.2
 ===================================
 
